--- a/com.taken_seat.payment-service/src/main/resources/templates/tossPaymentSuccess.html
+++ b/com.taken_seat.payment-service/src/main/resources/templates/tossPaymentSuccess.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/style.css"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>결제 성공</title>
 </head>
 <body>
 <div class="box_section" style="width: 600px">
